--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -14,31 +14,23 @@ spec:
         app: redis
     spec:
       containers:
-      - name: redis
-        image: redis:alpine
-        command: ["redis-server", "/etc/redis/redis.conf"]
-        volumeMounts:
-        - name: redis-config
-          mountPath: /etc/redis
-        - name: redis-storage
-          mountPath: /data
-        ports:
-        - containerPort: 6379
-        readinessProbe:
-          tcpSocket:
-            port: 6379
-          initialDelaySeconds: 5
-          periodSeconds: 5
+        - name: redis
+          image: redis:7-alpine
+          ports:
+            - containerPort: 6379
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "250m"
+          volumeMounts:
+            - name: redis-data
+              mountPath: /data
       volumes:
-      - name: redis-config
-        configMap:
-          name: redis-config
-          items:
-          - key: redis.conf
-            path: redis.conf
-      - name: redis-storage
-        persistentVolumeClaim:
-          claimName: redis-pvc
+        - name: redis-data
+          emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
@@ -49,7 +41,8 @@ spec:
   selector:
     app: redis
   ports:
-  - protocol: TCP
-    port: 6379
-    targetPort: 6379
+    - port: 6379
+      targetPort: 6379
   type: ClusterIP
+
+
